{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 191,
  "lineage": "78f76b02-f4cc-6442-8737-c84c723a20da",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pg-meta-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cb2ecea35798f3f",
            "arn": "arn:aws-cn:ec2:cn-northwest-1:673573250927:instance/i-0811cdee88b3ccedb",
            "associate_public_ip_address": true,
            "availability_zone": "cn-northwest-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0811cdee88b3ccedb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "z1d.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "pigsty-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-099daaff647849739",
            "private_dns": "ip-10-10-10-10.cn-northwest-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.10",
            "public_dns": "ec2-52-83-42-158.cn-northwest-1.compute.amazonaws.com.cn",
            "public_ip": "52.83.42.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 1920,
                "throughput": 0,
                "volume_id": "vol-08f6c6b4237c501ec",
                "volume_size": 640,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9d108bf3f942777",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "Pigsty Meta Node",
              "Project": "pigsty",
              "VPC": "vpc-019b69255f5860411",
              "cls": "pg-meta",
              "ins": "pg-meta-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "Pigsty Meta Node",
              "Project": "pigsty",
              "VPC": "vpc-019b69255f5860411",
              "cls": "pg-meta",
              "ins": "pg-meta-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b63c6481b2118f81"
            ]
          },
          "dependencies": [
            "aws_security_group.pigsty_sg",
            "aws_subnet.pigsty_subnet",
            "aws_vpc.pigsty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pg-test-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cb2ecea35798f3f",
            "arn": "arn:aws-cn:ec2:cn-northwest-1:673573250927:instance/i-0983ec10467c554cc",
            "associate_public_ip_address": true,
            "availability_zone": "cn-northwest-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 48,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0983ec10467c554cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5d.metal",
            "ipv6_address_count": 0,
            "key_name": "pigsty-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bd8884377a69d893",
            "private_dns": "ip-10-10-10-11.cn-northwest-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.11",
            "public_dns": "ec2-69-230-210-50.cn-northwest-1.compute.amazonaws.com.cn",
            "public_ip": "69.230.210.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06625842d56c423db",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9d108bf3f942777",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "Pigsty Test Node 1",
              "Project": "pigsty",
              "VPC": "vpc-019b69255f5860411",
              "cls": "pg-test",
              "ins": "pg-test-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "Pigsty Test Node 1",
              "Project": "pigsty",
              "VPC": "vpc-019b69255f5860411",
              "cls": "pg-test",
              "ins": "pg-test-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b63c6481b2118f81"
            ]
          },
          "dependencies": [
            "aws_security_group.pigsty_sg",
            "aws_subnet.pigsty_subnet",
            "aws_vpc.pigsty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pigsty_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:673573250927:internet-gateway/igw-00a1be4e0856628e9",
            "id": "igw-00a1be4e0856628e9",
            "owner_id": "673573250927",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "pigsty-vpc",
              "Project": "pigsty",
              "VPC": "vpc-019b69255f5860411"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "pigsty-vpc",
              "Project": "pigsty",
              "VPC": "vpc-019b69255f5860411"
            },
            "vpc_id": "vpc-019b69255f5860411"
          },
          "dependencies": [
            "aws_vpc.pigsty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00a1be4e0856628e9",
            "id": "r-rtb-055139379de1ec6251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-055139379de1ec625",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pigsty_igw",
            "aws_route_table.pigsty_rt",
            "aws_vpc.pigsty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pigsty_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:673573250927:route-table/rtb-055139379de1ec625",
            "id": "rtb-055139379de1ec625",
            "owner_id": "673573250927",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "pigsty-route",
              "Project": "pigsty",
              "VPC": "vpc-019b69255f5860411"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "pigsty-route",
              "Project": "pigsty",
              "VPC": "vpc-019b69255f5860411"
            },
            "timeouts": null,
            "vpc_id": "vpc-019b69255f5860411"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pigsty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pigsty_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d270a0b2926bdbb6",
            "route_table_id": "rtb-055139379de1ec625",
            "subnet_id": "subnet-0c9d108bf3f942777"
          },
          "dependencies": [
            "aws_route_table.pigsty_rt",
            "aws_subnet.pigsty_subnet",
            "aws_vpc.pigsty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pigsty_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:673573250927:security-group/sg-0b63c6481b2118f81",
            "description": "Pigsty Security Group",
            "egress": [],
            "id": "sg-0b63c6481b2118f81",
            "ingress": [],
            "name": "pigsty-sg",
            "name_prefix": "",
            "owner_id": "673573250927",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "pigsty-sg",
              "Project": "pigsty",
              "VPC": "vpc-019b69255f5860411"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "pigsty-sg",
              "Project": "pigsty",
              "VPC": "vpc-019b69255f5860411"
            },
            "timeouts": null,
            "vpc_id": "vpc-019b69255f5860411"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pigsty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Public Access In",
            "from_port": 0,
            "id": "sgrule-2504825406",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b63c6481b2118f81",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pigsty_sg",
            "aws_vpc.pigsty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Public Access Out",
            "from_port": 0,
            "id": "sgrule-4177996190",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b63c6481b2118f81",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pigsty_sg",
            "aws_vpc.pigsty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pigsty_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:673573250927:subnet/subnet-0c9d108bf3f942777",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1a",
            "availability_zone_id": "cnnw1-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9d108bf3f942777",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "673573250927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "pigsty-subnet",
              "Project": "pigsty"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "pigsty-subnet",
              "Project": "pigsty"
            },
            "vpc_id": "vpc-019b69255f5860411"
          },
          "dependencies": [
            "aws_vpc.pigsty_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pigsty_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:673573250927:vpc/vpc-019b69255f5860411",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-062db00a8ac5a9845",
            "default_route_table_id": "rtb-0572a50747ac3374c",
            "default_security_group_id": "sg-0b7f0ea9b6bba49c6",
            "dhcp_options_id": "dopt-0c693e37c23e958fa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-019b69255f5860411",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0572a50747ac3374c",
            "owner_id": "673573250927",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "pigsty-vpc",
              "Project": "pigsty"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "pigsty-vpc",
              "Project": "pigsty"
            }
          }
        }
      ]
    }
  ]
}